Fix → added align-items property to header nav

--- a/css/app.css
+++ b/css/app.css
@@ -125,6 +125,7 @@ main h1{
 nav .row{
     justify-content: space-between;
     padding: 20px;
+    align-items: center;
 }
 
 [class^=header__nav] li{
